# rags_implementations

./: .gitignore  README.md  main.py  pyproject.toml
data/bm25s_index/: data.csc.index.npy  indptr.csc.index.npy  vocab.index.json
data/chroma_db/: chroma.sqlite3
rag/: golden_dataset.jsonl  naive_rag.ipynb  test_cases.jsonl
rag_1/: README.md  naive_rag.ipynb
rag_1/eval/: golden_dataset.jsonl  test_cases.jsonl
rag_2/: README.md  main.py  rag_2.ipynb
rag_2/eval/: classic_retrieval_logs.csv  golden_dataset.jsonl  retrieval_logs.csv  retrieval_test_results.jsonl
rag_2/notebook/: rag_2.ipynb
rag_2/notebook/eval/: generation_logs.csv  generation_test_results.jsonl  golden_dataset.jsonl  retrieval_logs.csv
rag_2/src/: config.py
rag_2/src/core/: clients.py
rag_2/src/data/bm25s_index/: corpus.jsonl  corpus.mmindex.json  indices.csc.index.npy  params.index.json
rag_2/src/data/vectorstore/47b2d877-1dd9-40ff-b103-e1b689d87e31/: index_metadata.pickle
rag_2/src/ingestion/: bm25s_indexer.py  chunking.py  embeddings.py  ingest.py  parsing.py
rag_2/src/retrieval/: bm25s_retrieval.py  hybrid_search.py  metadata_filtering.py  reranking.py  vdb_retrieval.py
