[project]
name = "rags-implementations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=4.0.6",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.43.0",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "venv",
]
