[project]
name = "rags-implementations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.3.9",
    "cohere>=7.0.4",
    "deepeval>=4.0.6",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.43.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rag-eval-lite>=0.1.4",
]

[tool.uv.workspace]
members = [
    "venv",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
